// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bitbucket DOM functions diffDOMFunctions Split view line number 733 in head diff part getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "defer srv.Close()",
  "selector": "TR.line_holder.parallel:nth-child(3) > TD.line_content.parallel.right-side > SPAN.line",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Split view line number 733 in head diff part getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "defer srv.Close()",
  "selector": "TR.line_holder.parallel:nth-child(3) > TD.line_content.parallel.right-side",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Split view line number 735 in base diff part getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "u := url.URL{Scheme: \\"ws\\", Host: srv.Listener.Addr().String(), Path: build.Session.Endpoint + \\"/exec\\"}",
  "selector": "[id='ca8e0332ce17b2ee630a2ee2c0b56d47a462dadf_735_735'] > *",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Split view line number 735 in base diff part getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "u := url.URL{Scheme: \\"ws\\", Host: srv.Listener.Addr().String(), Path: build.Session.Endpoint + \\"/exec\\"}",
  "selector": "[id='ca8e0332ce17b2ee630a2ee2c0b56d47a462dadf_735_735']",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Split view line number 740 in head diff part getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "headers := http.Header{",
  "selector": "[id='LC740']",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Split view line number 740 in head diff part getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "headers := http.Header{",
  "selector": "[id='ca8e0332ce17b2ee630a2ee2c0b56d47a462dadf_737_740']",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Unified view line number 733 in head diff part getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "defer srv.Close()",
  "selector": "[id='LC733']",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Unified view line number 733 in head diff part getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "defer srv.Close()",
  "selector": "TR[id='ca8e0332ce17b2ee630a2ee2c0b56d47a462dadf_733_733'].line_holder > TD.line_content",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Unified view line number 735 in base diff part getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "u := url.URL{Scheme: \\"ws\\", Host: srv.Listener.Addr().String(), Path: build.Session.Endpoint + \\"/exec\\"}",
  "selector": "TR[id='ca8e0332ce17b2ee630a2ee2c0b56d47a462dadf_735_735'] > TD > SPAN",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Unified view line number 735 in base diff part getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "u := url.URL{Scheme: \\"ws\\", Host: srv.Listener.Addr().String(), Path: build.Session.Endpoint + \\"/exec\\"}",
  "selector": "TR[id='ca8e0332ce17b2ee630a2ee2c0b56d47a462dadf_735_735'].line_holder.old > TD.line_content.old",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Unified view line number 740 in head diff part getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "headers := http.Header{",
  "selector": "[id='LC740']",
}
`;

exports[`Bitbucket DOM functions diffDOMFunctions Unified view line number 740 in head diff part getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "headers := http.Header{",
  "selector": "TR[id='ca8e0332ce17b2ee630a2ee2c0b56d47a462dadf_737_740'].line_holder.new > TD.line_content.new",
}
`;

exports[`Bitbucket DOM functions singleFileDOMFunctions line number 1 getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "package shell",
  "selector": "[id='LC1']",
}
`;

exports[`Bitbucket DOM functions singleFileDOMFunctions line number 1 getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "package shell",
  "selector": "[id='LC1']",
}
`;

exports[`Bitbucket DOM functions singleFileDOMFunctions line number 22 getCodeElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "type executor struct {",
  "selector": "[id='LC22']",
}
`;

exports[`Bitbucket DOM functions singleFileDOMFunctions line number 22 getLineElementFromLineNumber() should return the right code element given the line number 1`] = `
Object {
  "content": "type executor struct {",
  "selector": "[id='LC22']",
}
`;
